2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2007-03-12  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (::fileutil::TempDir): Added code to collect all
	* pkgIndex.tcl: problems encountered, to be reported if no temp
	* fileutil.man: directory could be found, to aid in the
	  debugging of the situation. Bumped version up to 1.11.

2007-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl: Added a command [fileutil::fullnormalize].
	* fileutil.man: Documented it, extended the testsuite. Bumped
	* filetuil.test: version up to 1.10. Removed nonsensical
	* pkgIndex.tcl: [file join one_element] calls from the testsuite.

2006-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Marked all 20 permission dependent tests as
	  'notRoot' as they cannot fail when the superuser executes the
	  testsuite.

2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Rewritten to use new features for handling the
	  environment.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl: Bumped version to 1.9
	* fileutil.man:
	* pkgIndex.tcl:

2006-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Fixed 8.3isms in the testsuite. Symbolic
	  permissions for 'file attributes' are not available in 8.2 yet
	  :(. Also fixed the tests using hardcoded wrong#args messages to
	  use the compatibility commands instead.

2006-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Fixed 8.4ism in the testsuite of a 8.2+ package.

2006-07-19  Andreas Kupries  <andreask@activestate.com>
