@@ -1,9 +1,9 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin fileutil n 1.11]
+[manpage_begin fileutil n 1.12]
 [moddesc   {file utilities}]
 [titledesc {Procedures implementing some file utilities}]
 [require Tcl 8]
-[require fileutil [opt 1.11]]
+[require fileutil [opt 1.12]]
 [description]
 [keywords {file utilities} touch grep type {temp file} test cat]
 [para]
